--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'org.springframework.boot' version '2.3.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
 }
@@ -24,13 +24,16 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 
-    // Swagger
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    // Swagger(2.9.2 이상 버전은 동작 안함)
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    // Guava
+    implementation("com.google.guava:guava:29.0-jre")
 }
 
 test {
